# numeraire-cpp

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  cache_market_data_for_range.sh  config.json  db.sqlite3  generate_module.sh  generate_report.sh  holidays.csv  live_options.sh  ninja_debug.sh  ninja_rebuild.sh  rebuild.sh  rebuild_ninja.sh  run_cache_market_data.sh  xcode_rebuild.sh
CMakeScripts/: ReRunCMake.make
Debug/: clicker_plus_plus  test_environment
clicker_plus_plus.xcodeproj/: project.pbxproj
configs/: constants.hpp  main_config.json  schedule_config.json  schedule_config_mc.json  secrets.json
header/array/: array_of_products.hpp
header/arrays/: container_with_most_water.hpp  first_duplicated_value.hpp  isValidSequence.hpp  lonely_number.hpp  majority_element.hpp  min_reward.hpp  minimum_loss.hpp  move_element_to_the_end.hpp  non_constructible_change.hpp  remove_duplicates_from_sorted_array.hpp  smallest_difference.hpp  sorted_squared.hpp  tournament_winner.hpp  transponse_matrix.hpp  two_number_sum.hpp  zero_cross.hpp
header/backtracking/: permutations.hpp  subsets.hpp
header/binary_tree/: binary_tree_encapsulated.hpp  binary_tree_node.hpp  binary_tree_simple.hpp  branch_sums.hpp  node_depths.hpp
header/bit_manipulation/: hamming_weight.hpp  lonely_number.hpp  reverse_bits.hpp
header/cli/: analytics_args.hpp  args_parser.hpp
header/competitive_programming/: binary_exponential.hpp
header/core/: market_data_fetcher.hpp  market_env_cache.hpp  market_environment.hpp  pricing_environment.hpp  schedule_generator.hpp  trade.hpp  trade_factory.hpp
header/database/: db_connection.hpp  trade_dao.hpp  trade_store.hpp
header/dynamic_programming/: coins_change.hpp  edit_distance.hpp  gold_mine.hpp  house_robbery.hpp  knapsack_problem01.hpp  lis_len.hpp  lis_sum.hpp  longest_increasing_matrix_path.hpp  longest_increasing_sequence.hpp  matrix_pathways_no_walls.hpp  min_cost_for_tickets.hpp  minimum_coin_combination.hpp  minimum_cost_path.hpp  minimum_path_cost.hpp  paths_in_matrix.hpp  rot_cutting_problem.hpp  square_matrix_of_ones.hpp  subset_sum_problem.hpp  subset_that_sum_to_k.hpp  ways_to_climb.hpp
header/enums/: schedule_enums.hpp
header/famous_algorithms/: dijkstra_algorithm.hpp  kadanes_algorithm.hpp
header/graphs/: count_islands.hpp  graph.hpp  graph_node.hpp  island_perimeter.hpp  longest_increasing_path.hpp  remove_island.hpp  river_sizes.hpp
header/greedy/: jump_to_the_end.hpp  optimal_freelancing.hpp  tandem_bicycle.hpp
header/hash_maps_and_sets/: geometric_sequence_triplets.hpp
header/heap/: continious_median.hpp
header/linked_list/: find_loop.hpp  remove_duplicates.hpp  single_linked_list.hpp
header/market_store/: live_equity_otion_contracts.hpp  option_prices.hpp  options_selectors.hpp  spot_store.hpp
header/math_and_geometry/: handshake.hpp  largest_triangle_area.hpp  line_through_points.hpp
header/matrix/: column_by_column.hpp  is_within_bounds.hpp  row_by_row.hpp  spiral_traversal.hpp  there_and_back.hpp
header/numbers_theory/: add_digits.hpp  deck_partition.hpp  die_hard3.hpp  is_prime.hpp
header/pricing/: option_pricer.hpp  pricing_factory.hpp
header/priority_queue/: stones_war.hpp
header/queue/: students_lunch.hpp  time_to_buy_tickets.hpp
header/recursion/: has_adjacent_cells.hpp  mine_sweeper.hpp  nth_fibbonaci.hpp  phone_number_mnemonics.hpp  sum_of_digits.hpp
header/searching/: binary_search.hpp  index_equal_value.hpp  kth_largest_element.hpp  local_maxima_array.hpp
header/simulation/: discretization_scheme.hpp  euler_scheme.hpp  path_simulator.hpp
header/sliding_window/: longest_substring_without_repeating_characters.hpp  parking_roof.hpp
header/sorting/: bubble_sort.hpp  count_inversions.hpp  dutch_national_flag.hpp  insertion_sort.hpp  kth_largest_element.hpp  merge_sort.hpp  quick_sort.hpp  selection_sort.hpp
header/stack/: balanced_brackets.hpp  best_digits.hpp  colliding_asteroids.hpp  daily_temperatures.hpp  evaluate_expression.hpp  int_stack.hpp  next_greater_element.hpp  sort_stack.hpp  sunset_views.hpp
header/strings/: ceasar_cipher_encryptor.hpp  common_characters.hpp  first_non_repeating_character.hpp  group_anagrams.hpp  is_permutation.hpp  palindrome_check.hpp  roman_to_intiger.hpp  run_length_encoding.hpp
header/utils/: date_utils.hpp  enum_mappers.hpp  holiday_utils.hpp  json_utils.hpp  logger.hpp  path_utils.hpp  print_domain.hpp  print_utils.hpp  print_utils_templates.hpp  report_utils.hpp  sqlite_utils.hpp
python_scripts/: generate_ir_curve_json.py  main.py
python_scripts/plotting/: plots_with_matplotlib.py  underlier_paths.py
src/: cache_market_data.cpp  main.cpp  main_analytics.cpp  main_cache_market_data.cpp  main_price_portfolio.cpp  main_simulate_paths.cpp  price_portfolio.cpp  simulate_paths.cpp
src/arrays/: array_of_products.cpp  container_with_most_water.cpp  first_duplicated_value.cpp  isValidSequence.cpp  is_valid_sequence.cpp  lonely_number.cpp  longest_increasing_matrix_path.cpp  majority_element.cpp  min_reward.cpp  minimum_loss.cpp  move_element_to_the_end.cpp  (+8 more)
unit_tests/: CMakeLists.txt
unit_tests/arrays/: test_isValidSequence.cpp  test_is_valid_sequence.cpp  test_majority_element.cpp  test_sorted_squared.cpp  test_two_number_sum.cpp  test_zero_cross.cpp
unit_tests/binary_tree/: test_binary_tree_simple.cpp
unit_tests/cli/: test_cli_parser.cpp
unit_tests/dynamic_programming/: test_gold_mine.cpp  test_house_robbery.cpp  test_ways_to_climb.cpp
unit_tests/famous_algorithms/: test_kadanes_algorithm.cpp
unit_tests/heap/: test_continious_median.cpp
unit_tests/linked_list/: test_single_linked_list.cpp
unit_tests/pricing/analytics/: test_forward_contract.cpp
unit_tests/recursion/: test_has_adjacent_cells.cpp  test_nth_fibbonaci.cpp
unit_tests/searching/: test_binary_search.cpp
unit_tests/sorting/: test_bubble_sort.cpp
unit_tests/stack/: test_balanced_brackets.cpp  test_sort_stack.cpp
unit_tests/strings/: test_first_non_repeating_character.cpp  test_roman_to_intiger.cpp
unit_tests/utils/: test_date_utils.cpp
(+152 files in other folders)
